--- a/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/el_GR/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-09 10:46+0000\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>\n"
 "Language-Team: Greek (Greece) (http://www.transifex.com/votdev/openmediavault/language/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3405,14 +3405,14 @@ msgid ""
 msgstr "Δεν θα είναι απαραίτητο να χρησιμοποιείται για την σύνδεση δεδομένων η συνεδρία SSL της σύνδεσης ελέγχου."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "Η διεύθυνση ΙΡ της συνεδρίας έχει αλλάξει."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Ο χρόνος λήξης της συνεδρίας σε λεπτά. Με 0 απενεργοποιείται."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Ο χρήστης της συνεδρίας δεν υπάρχει πλέον."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4007,7 +4007,7 @@ msgid "Write/Execute"
 msgstr "Εγγραφή/Εκτέλεση"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Συσκευή εικονικού δίσκου Xen"
 
 msgid "Yearly"
 msgstr "Ετήσια"
