--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 10:02+0000\n"
+"PO-Revision-Date: 2017-09-02 19:33+0000\n"
 "Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
@@ -1626,7 +1626,7 @@ msgid "Info"
 msgstr "Información"
 
 msgid "Informal"
-msgstr "Informal"
+msgstr "Informar"
 
 msgid "Information"
 msgstr "Información"
@@ -2672,12 +2672,12 @@ msgstr "Informe"
 msgid ""
 "Report if the temperature had changed by at least N degrees Celsius since "
 "last report. Set to 0 to disable this report."
-msgstr "Avisar si la temperatura ha cambiado al menos N grados Celsius desde el ultimo informe. 0 deshabilita el informe"
+msgstr "Avisar si la temperatura ha aumentado al menos N grados Celsius desde el ultimo informe. 0 deshabilita el informe"
 
 msgid ""
 "Report if the temperature is greater or equal than N degrees Celsius. Set to"
 " 0 to disable this report."
-msgstr "Avisar si la temperatura supera los N grados Celsius desde el último informe. 0 deshabilita el informe"
+msgstr "Avisar si la temperatura supera los N grados Celsius. 0 deshabilita el informe"
 
 msgid "Repository"
 msgstr "Repositorio"
