--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/da_DA/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/da_DA/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-08 18:51+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,7 +194,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Scan biblioteks indholdet parallelt ved hjælp af tilgængelige tråde."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Planlagte Opgaver"
 
 msgid "Send command output via email"
 msgstr "Send kommando output via email"
