--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-31 17:46+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -195,7 +195,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Skanna mappinnehåll med tillgängliga trådar i paralell."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Schemalagda jobb"
 
 msgid "Send command output via email"
 msgstr "Skicka resultatet av kommandot via e-post"
