--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_CN/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_CN/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-05 13:56+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,7 +194,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "使用可用线程并行扫描目录内容。"
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "计划任务"
 
 msgid "Send command output via email"
 msgstr "通过邮件发送命令输出结果"
