--- a/deb/openmediavault-nut/usr/share/openmediavault/locale/sv_SV/openmediavault-nut.po
+++ b/deb/openmediavault-nut/usr/share/openmediavault/locale/sv_SV/openmediavault-nut.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-16 08:26+0000\n"
+"PO-Revision-Date: 2017-09-01 20:39+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -91,7 +91,7 @@ msgid ""
 "To get more information how to configure your UPS please check the Network "
 "UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' "
 "target='_blank'>documentation</a>."
-msgstr "För att få mer information hur din UPS ska konfigureras, vänligen besök Network UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>documentation</a>."
+msgstr "För att få mer information hur din UPS ska konfigureras, besök Network UPS Tools <a href='http://www.networkupstools.org/docs/man/ups.conf.html' target='_blank'>documentation</a>."
 
 msgid "UPS"
 msgstr "UPS"
