--- a/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/da_DA/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-08 18:55+0000\n"
+"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/votdev/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -885,7 +885,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "Viser emne {0} - {1} af {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "Viser {0} - {1} af {2}"
 
 msgid "Djibouti"
 msgstr "Djibouti"
@@ -1316,7 +1316,7 @@ msgid "Firmware version"
 msgstr "Firmware version"
 
 msgid "First Page"
-msgstr ""
+msgstr "Første Side"
 
 msgid "Flags"
 msgstr "Flag"
@@ -1761,7 +1761,7 @@ msgid "Laos"
 msgstr "Laos"
 
 msgid "Last Page"
-msgstr ""
+msgstr "Sidste Side"
 
 msgid "Latvia"
 msgstr "Latvia"
@@ -2112,7 +2112,7 @@ msgid "New Zealand"
 msgstr "New Zealand"
 
 msgid "Next Page"
-msgstr ""
+msgstr "Næste Side"
 
 msgid "Nicaragua"
 msgstr "Nicaragua"
@@ -2145,7 +2145,7 @@ msgid "No connections"
 msgstr "Ingen forbindelser"
 
 msgid "No data to display"
-msgstr ""
+msgstr "Ingen data til visning"
 
 msgid "No items to display"
 msgstr "Ingen emner til visning"
@@ -2271,7 +2271,7 @@ msgid "Package information"
 msgstr "Pakke oplysninger"
 
 msgid "Page"
-msgstr ""
+msgstr "Side"
 
 msgid "Page not found"
 msgstr "Side ikke fundet"
@@ -2487,7 +2487,7 @@ msgid ""
 msgstr "Forhindre en disk i at blive spundet op, når den periodisk bliver adspurgt.<br/><ul><li>Aldrig - Spørg (kontroller) enheden uanset dens strøm tilstand. Dette kan medføre en disk, der er spundet ned i at blive spundet op, når den kontrolleres.</li><li>Dvale - Kontroller enheden medmindre den er i DVALE tilstand.</li><li>Standby - Kontroller enheden medmindre den er i DVALE eller STANDBY tilstand. I disse tilstande spinder de fleste diske ikke, så hvis du ønsker at forhindre en disk i at spinde op ved hver adspørgelse, er det nok det du vil.</li><li>Ledig - Kontroller enheden medmindre den er i DVALE, STANDBY eller LEDIG tilstand. I LEDIG tilstand, spinder de fleste diske stadig, så det er sandsynligvis nok ikke det du vil.</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "Forrige Side"
 
 msgid "Primary"
 msgstr "Primær"
@@ -3405,14 +3405,14 @@ msgid ""
 msgstr "Kravet om, at SSL-sessionen fra kontrolforbindelsen bliver genanvendt til dataforbindelser er ikke nødvendig."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "Sessionens IP adresse er blevet ændret."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Session udløbstid i minutter. Sæt til 0 for at deaktivere automatisk log ud."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Sessionens bruger eksistere ikke mere."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4007,7 +4007,7 @@ msgid "Write/Execute"
 msgstr "Skriv/Udfør"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Xen virtuel disk enhed"
 
 msgid "Yearly"
 msgstr "Årligt"
@@ -4052,7 +4052,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "af {0}"
 
 msgid "old-age"
 msgstr "ældre"
