--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-14 13:21+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3410,14 +3410,14 @@ msgid ""
 msgstr "Il requisito che la sessione SSL venga riutilizzata per le connessioni dati dal controllo connessione non è obbligatorio."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "L'indirizzo IP della sessione è cambiato."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Timeout di sessione definito in minuti. Imposta a 0 per disabilitare il logout automatico."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "La sessione non esiste più."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4012,7 +4012,7 @@ msgid "Write/Execute"
 msgstr "Scrittura/Esecuzione"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Dispositivo disco virtuale Xen"
 
 msgid "Yearly"
 msgstr "Annuale"
