--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-03 11:09+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1651,7 +1651,7 @@ msgid "Installing plugins ..."
 msgstr "Installerar insticksmoduler ..."
 
 msgid "Installing updates ..."
-msgstr "Installera uppdateringar ..."
+msgstr "Installerar uppdateringar ..."
 
 msgid "Interfaces"
 msgstr "Gränssnitt"
@@ -2428,7 +2428,7 @@ msgid "Please reload the page to let the changes take effect."
 msgstr "Ladda om sidan för att låta ändringarna träda i kraft."
 
 msgid "Please wait ..."
-msgstr "Vänligen vänta ..."
+msgstr "Vänta ..."
 
 msgid ""
 "Please wait until the RAID has been initialized before creating a file "
@@ -2734,7 +2734,7 @@ msgid "Run"
 msgstr "Kör"
 
 msgid "Running"
-msgstr "Kör"
+msgstr "Körs"
 
 msgid "Russia"
 msgstr "Ryssland"
@@ -3188,7 +3188,7 @@ msgid "Standby"
 msgstr "Vänteläge"
 
 msgid "Start"
-msgstr "Start"
+msgstr "Starta"
 
 msgid "State"
 msgstr "Tillstånd"
@@ -3406,14 +3406,14 @@ msgid ""
 msgstr "Kravet på att SSL-sessionen från kontrollanslutningen återanvänds för dataanslutningar krävs inte."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "Sessions-IP-adressen har ändrats."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Sessionsutlösningstiden i minuter. Sätt till 0 för att inaktivera automatisk utloggning."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Sessionsanvändaren finns inte längre."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4008,7 +4008,7 @@ msgid "Write/Execute"
 msgstr "Skriv/Utför"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Xen virtuell diskenhet"
 
 msgid "Yearly"
 msgstr "Årligen"
