--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-05 13:55+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3406,14 +3406,14 @@ msgid ""
 msgstr "不要求控制连接 SSL 会话重用与数据连接。"
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "需要改变回话 IP 地址。"
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "会话超时多少分钟后注销，设置 0 后不自动注销。"
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "回话用户不存在。"
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4008,7 +4008,7 @@ msgid "Write/Execute"
 msgstr "写/执行"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Xen 虚拟磁盘设备"
 
 msgid "Yearly"
 msgstr "每年"
