--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-16 22:02+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,7 +194,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Сканування вмісту каталогу паралельно, використовуючи доступні потоки."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Заплановані завдання"
 
 msgid "Send command output via email"
 msgstr "Відправити висновок команди по електронній пошті"
