--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-09-16 22:07+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3407,14 +3407,14 @@ msgid ""
 msgstr "Встановлення повторного використання сесії SSL керуючого з'єднання для передачі даних."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "IP-адреса сесії була змінена."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Час очікування сеансу у хвилинах. Встановіть 0 щоб відключити автоматичний вихід із системи."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Сеанс користувача більше не існує."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4009,7 +4009,7 @@ msgid "Write/Execute"
 msgstr "Записати/Виконати"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Віртуальний дисковий пристрій Xen"
 
 msgid "Yearly"
 msgstr "Щороку"
