--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (4.0.1-1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Sep 2017 17:43:16 +0200
+
 openmediavault-netatalk (4.0-1) stable; urgency=low
 
   * Adapt to Debian 9 (Stretch).
