Mantis 0001823: Monit collectd and PID file.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (4.0.6-1) stable; urgency=low
   * Various improvements.
   * Outsource SNMP into a separate plugin. Please note that the existing
     configuration will be deleted.
+  * Mantis 0001823: Monit collectd and PID file.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 Sep 2017 02:08:28 +0200
 
