Mantis 0001826: Fix hdparm issue.
The SysV init script has been removed from the package with Debian Stretch. Everything is now handled via UDEV. See https://lists.freedesktop.org/archives/systemd-devel/2012-June/005595.html and https://lists.freedesktop.org/archives/systemd-devel/2012-June/005600.html (Uaaahhhuuu from our beloved and hated friend :-))

Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (4.0.6-1) stable; urgency=low
   * Outsource SNMP into a separate plugin. Please note that the existing
     configuration will be deleted.
   * Mantis 0001823: Monit collectd and PID file.
+  * Mantis 0001826: Fix hdparm issue.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 Sep 2017 02:08:28 +0200
 
