--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.89) stable; urgency=low
 
   * Various improvements.
+  * Fix bug in System::getMemoryStats().
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Sep 2017 20:51:25 +0200
 
