Remove various logrotate config files.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.90) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Oct 2017 21:55:19 +0200
+
 openmediavault (3.0.89) stable; urgency=low
 
   * Various improvements.
