--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.7-1) stable; urgency=low
+
+  * Fix dependency order of shared folder systemd mount units.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 10 Oct 2017 21:41:40 +0200
+
 openmediavault (4.0.6-1) stable; urgency=low
 
   * Various improvements.
