--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -58,9 +58,17 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.90) stable; urgency=low
+
+  * Various improvements.
+  * Mantis 0001824: File System tab page 2 not accessible.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Oct 2017 21:55:19 +0200
+
 openmediavault (3.0.89) stable; urgency=low
 
   * Various improvements.
+  * Fix bug in System::getMemoryStats().
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Sep 2017 20:51:25 +0200
 
