--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,7 @@
 openmediavault (4.0.7-1) stable; urgency=low
 
+  * Improve various postfix issues. Set smtp_tls_security_level=encrypt by
+    default. and set smtpd_tls_wrappermode=yes if port is 465.
   * Fix dependency order of shared folder systemd mount units.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 10 Oct 2017 21:41:40 +0200
